Attempt at fixing page view on IE11

--- a/kodefantno/web/app/themes/kodefant/resources/assets/styles/layouts/_posts.scss
+++ b/kodefantno/web/app/themes/kodefant/resources/assets/styles/layouts/_posts.scss
@@ -1,4 +1,5 @@
-.post-template-default {
+.post-template-default,
+.page-template-default {
   header {
     h1 {
       margin-top: 1rem;
